# vr-launcher

./: .env  .gitignore  Cargo.toml  README.md  build.rs  diesel.toml  todo.md  vr-launcher.desktop
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  BatteryChargeSource.ts  BatteryHealth.ts  BatteryStatus.ts  api.ts  rust_bindings.ts  socket.ts
frontend/src/components/: AreaChart.tsx  AudioSelector.tsx  BatteryIndicator.tsx  GameCard.tsx  GamesGrid.tsx  Header.tsx  Modal.tsx  NowPlaying.tsx  RootView.tsx
frontend/src/components/utils/: clickOutside.ts
frontend/src/utils/: observable.ts
frontend/src/views/: GamesGrid.tsx  NowPlaying.tsx  RootView.tsx
migrations/2025-06-16-032622_create_games/: down.sql  up.sql
migrations/2025-12-19-165823_games_overlay_flag/: down.sql  up.sql
notes/: BSManager Launch.txt  bsm_620980_BeatSaber.txt  env_notes.md  steam_0_VaM.txt  steam_438100_VRChat.txt  steam_450390_TheLab.txt  steam_588030_DerailValley.txt
src/: app_state.rs  audio_api.rs  battery_monitor.rs  command_parser.rs  main.rs  models.rs  overlay.rs  schema.rs
src/adb/: adb_device.rs  device_manager.rs  mod.rs  wifi_info.rs
src/backends/: mod.rs  wivrn.rs
src/backends/envision/: config.rs  envision_backend.rs  envision_launch_modifier.rs  mod.rs
src/backends/wivrn/: mod.rs  wivrn_backend.rs  wivrn_launch_modifier.rs  wivrn_log_handler.rs
src/dev/: mod.rs  proton_sentinel.rs
src/logging/: log_channel.rs  log_manager.rs  log_session.rs  mod.rs
src/perf/: mod.rs
src/routes/: audio.rs  debug.rs  device.rs  frontend.rs  game_state.rs  games.rs  mod.rs  sock.rs
src/steam/: launcher.rs  mod.rs  steam_interface.rs  vfd_format.rs
src/steam/launch_modifiers/: env_vars.rs  mod.rs  steam.rs  wivrn.rs
