[package]
name = "vr-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
dotenvy = "0.15.7"
tower-http = { version = "0.6.6", features = ["set-header"] }
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
pipewire = "0.8.0"
diesel = { version = "2.2.10", features = ["sqlite", "serde_json"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
futures-util = "0.3.31"
steamlocate = "2.0.1"
byteorder = "1.5.0"
num_enum = "0.7.3"
sysinfo = "0.35.2"
vdf-reader = "0.3.1"
ts-rs = "11.0.1"
rusb = "0.9.4"
adb_client = "2.1.13"
nix = { version = "0.30.1", features = ["signal"] }
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
log = "0.4.27"
once_cell = "1.21.3"
flate2 = "1.1.2"
tar = "0.4.44"